Added Draft Project Pages

--- a/about.html
+++ b/about.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="utf-8">
         <html lang="en">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+        <meta content="width=device-width" name="viewport">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">   
         <title>About</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
