--- a/project_pages/ByteFlash.html
+++ b/project_pages/ByteFlash.html
@@ -4,19 +4,19 @@
         <meta charset="utf-8">
         <html lang="en">
         <meta content="width=device-width" name="viewport">
-        <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">   
-        <title>Contact</title>
-        <link rel="stylesheet" href="css/style.css">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">        
+        <title>ByteFlash</title>
+        <link rel="stylesheet" href="../css/style.css">
     </head>
 
     <body>
         <!-- Nav Bar -->
         <nav class="topnav">
             <div class="mobile-menu">
-                <a href="index.html">Home</a>
-                <a href="projects.html">My Projects</a>
-                <a href="about.html">About Me</a>
-                <a href="contact.html" class="active">Contact</a>
+                <a href="../index.html">Home</a>
+                <a href="../projects.html" class="active">My Projects</a>
+                <a href="../about.html">About Me</a>
+                <a href="../contact.html">Contact</a>
             </div>
             
             <!-- Burger Menu Icon for Mobile -->
@@ -26,23 +26,32 @@
 
             <!-- Left Aligned -->
             <div class="topnav-left">
-                <a href="index.html">Home</a>
+                <a href="../index.html">Home</a>
             </div>
 
             <!-- Centered -->
             <div class="topnav-centered">
-                <a href="projects.html">My Projects</a>
-                <a href="about.html">About Me</a>
+                <a href="../projects.html" class="active">My Projects</a>
+                <a href="../about.html">About Me</a>
             </div>
 
             <!-- Right Aligned -->
              <div class="topnav-right">
-                <a href="contact.html" class="active">Contact</a>
+                <a href="../contact.html">Contact</a>
             </div>
         </nav>
 
+
+        <!-- Body -->
+        <div class="project-parent">
+
         <!-- Title -->
-        <h1> Contact </h1>
+        <div class="projects-center-row1">
+            <div class="projects-center-title">
+                <h1>ByteFlash</h1>
+                <p>Here you will find a description for the project ByteFlash</p>
+            </div>
+        </div>
 
         <!-- Body -->
         <div>
@@ -89,7 +98,17 @@
                 Text and stuff and Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel hic voluptas facilis blanditiis asperiores nisi ab, maiores, cum iusto omnis minima voluptate repellendus. Eligendi libero quod magni, consectetur excepturi doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, unde maxime? Quasi saepe nihil harum eius. Deserunt laudantium commodi, aliquid doloribus eius veniam qui ab suscipit, dignissimos facere porro harum.
             </p>
         </div>
-         
+
+        <div class="index-footer">
+            <h2>Footer</h2>
+            <p>
+                Text and stuff and Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel hic voluptas facilis blanditiis asperiores nisi ab, maiores, cum iusto omnis minima voluptate repellendus. Eligendi libero quod magni, consectetur excepturi doloremque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, unde maxime? Quasi saepe nihil harum eius. Deserunt laudantium commodi, aliquid doloribus eius veniam qui ab suscipit, dignissimos facere porro harum.
+            </p>
+            <p>
+                &copy; 2025 by Nick Lee. All Rights Reserved.
+            </p>
+        </div>
+
         <!-- JavaScript File (Keep at bottom for improved loading)-->
         <script src="js/script.js"></script>
     </body>
