--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="utf-8">
         <html lang="en">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+        <meta content="width=device-width" name="viewport">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">        
         <title>My Projects</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
@@ -60,21 +61,23 @@
                 <ul class="timeline">
                     <!-- Timeline Item 1 -->
                     <li>
-                        <div class="timeline-date">2020</div>
+                        <div class="timeline-date">2025</div>
                         <div class="timeline-content">
-                            <h3>Project Alpha</h3>
-                            <p>Description of the project. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            <img src="assets/img/project1.jpg" alt="Project Alpha">
+                            <h3 id="PortfolioWebsite">Portfolio Website</h3>
+                            Description of the ongoing project. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            <br><a href="project_pages/PortfolioWebsite.html" class="about-button">Read More...</a>
+                            <img src="assets/img/project1.jpg" alt="Image of Project">
                         </div>
                     </li>
                     <br><br>
                     <!-- Timeline Item 2 -->
                     <li>
-                        <div class="timeline-date">2019</div>
+                        <div class="timeline-date">2025</div>
                         <div class="timeline-content">
-                            <h3>Project Beta</h3>
-                            <p>Description of the project. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            <img src="assets/img/project2.jpg" alt="Project Beta">
+                            <h3 id="ByteFlash">ByteFlash</h3>
+                            This project centers on developing an affordable and programmable games console designed to align with the UK Government’s Electronics in Schools Initiative, specifically targeting Year 8 students (aged 12–13). The console is built around two core principles: accessibility for educational use and hands-on engagement with STEM concepts. By combining a user-friendly interface, modifiable code, and low-cost hardware, the device aims to demystify electronics and programming while fostering creativity and problem-solving skills in young learners.
+                            <br><a href="project_pages/ByteFlash.html" class="about-button">Read More...</a>
+                            <img src="assets/img/project2.jpg" alt="Image of Project">
                         </div>
                     </li>
                     
