--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="utf-8">
         <html lang="en">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+        <meta content="width=device-width" name="viewport">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">               
         <title>Portfolio</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
@@ -61,7 +62,7 @@
                     </div>
                     <div class="index-content-box index-content-box-vert">
                         <p>
-                            I am a dedicated student pursuing an MEng degree in Electronic and Computer Engineering at the Univerity of York, driven by a passion for technology and innovation. My journey began with a fascination for how things work, leading me to explore various aspects of engineering. I am developing skills in programming, circuit design, and project management, which I have applied in several projects, including a low cost educational games console. My goal is to develop projects to improve my understanding of technology.
+                            I am a dedicated student pursuing an MEng degree in Electronic and Computer Engineering at the University of York, driven by a passion for technology and innovation. My journey began with a fascination for how things work, leading me to explore various aspects of engineering. I am developing skills in programming, circuit design, and project management, which I have applied in several projects, including a low cost educational games console. My goal is to develop projects to improve my understanding of technology.
                             <br><br><a href="about.html" class="about-button">More About Me...</a>
                         </p>
                     </div>
@@ -76,19 +77,21 @@
                     <div class="index-project-grid">
                         <!-- Project Item 1 -->
                         <div class="index-project-item">
-                            <img src="assets/img/project5.jpg" alt="Project Epsilon">
+                            <img src="assets/img/project5.jpg" alt="Image of Project">
                             <div class="index-project-info">
-                                <h3>Project Epsilon</h3>
-                                <p>Description of the ongoing project. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                <h3>ByteFlash</h3>
+                                <p>This project centers on developing an affordable and programmable games console designed to align with the UK Government’s Electronics in Schools Initiative, specifically targeting Year 8 students (aged 12–13). The console is built around two core principles: accessibility for educational use and hands-on engagement with STEM concepts. By combining a user-friendly interface, modifiable code, and low-cost hardware, the device aims to demystify electronics and programming while fostering creativity and problem-solving skills in young learners.</p>
+                                <a href="projects.html #ByteFlash" class="about-button">Learn More...</a>
                             </div>
                         </div>
                         
                         <!-- Project Item 2 -->
                         <div class="index-project-item">
-                            <img src="assets/img/project6.jpg" alt="Project Zeta">
+                            <img src="assets/img/project6.jpg" alt="Image of Project">
                             <div class="index-project-info">
-                                <h3>Project Zeta</h3>
+                                <h3>This Portfolio Website!</h3>
                                 <p>Description of the ongoing project. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                <a href="projects.html #PortfolioWebsite" class="about-button">Learn More...</a>
                             </div>
                         </div>
                         
