Tweaked Timeline Dates

--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,7 @@
                 <ul class="timeline">
                     <!-- Timeline Item 1 -->
                     <li>
-                        <div class="timeline-date">2025</div>
+                        <div class="timeline-date">24 Mar 2025 - Present</div>
                         <div class="timeline-content">
                             <h3 id="PortfolioWebsite">Portfolio Website</h3>
                             Description of the ongoing project. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -72,7 +72,7 @@
                     <br><br>
                     <!-- Timeline Item 2 -->
                     <li>
-                        <div class="timeline-date">2025</div>
+                        <div class="timeline-date">17 Feb 2025 - 13 May 2025</div>
                         <div class="timeline-content">
                             <h3 id="ByteFlash">ByteFlash</h3>
                             This project centers on developing an affordable and programmable games console designed to align with the UK Government’s Electronics in Schools Initiative, specifically targeting Year 8 students (aged 12–13). The console is built around two core principles: accessibility for educational use and hands-on engagement with STEM concepts. By combining a user-friendly interface, modifiable code, and low-cost hardware, the device aims to demystify electronics and programming while fostering creativity and problem-solving skills in young learners.
